SERVER-27118 Default shutdown command's timeoutSecs argument to 10 seconds

(cherry picked from commit 232832a0e79252a29061def2fb89b985f29b78c7)